# gherkin-fmt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  architecture.md  skills.md  snapshot_testing.sh
.github/workflows/: feature_branch.yml  release.yml
spec/cli/: help.feature  input-output.feature  stdin-stdout.feature  version.feature
spec/formatters/background-block-formatters/: empty-line-before-rule.feature  indentation-rule.feature  integration.feature  keyword-is-capital-rule.feature  steps-in-scenario-rule.feature
spec/formatters/examples-block-formatters/: empty-line-before-rule.feature  indentation-rule.feature  keyword-starts-with-capital-rule.feature
spec/formatters/examples-block-rules/: empty-line-before-rule.feature  indentation-rule.feature
spec/formatters/feature-block-formatters/: aligned-to-0-place-rule.feature  integration.feature  preserve-lines-before-block-rule.feature  story-rule.feature
spec/formatters/raw-text-formatters/: unchanged.feature
spec/formatters/scenario-block-formatters/: empty-line-before-rule.feature  indentation-rule.feature  integration.feature  steps-in-scenario-rule.feature
spec/formatters/scenario-outline-block-formatters/: empty-line-before-rule.feature  indentation-rule.feature  integration.feature  keyword-capitalised-rule.feature  steps-in-scenario-rule.feature
spec/formatters/step-block-formatters/: input-parameters-rule.feature  (+4 more)
src/: main.rs
src/cli/: mod.rs  tests.rs
src/formatters/: config.rs  formatter.rs  mod.rs
src/gherkin-fmt/: CHANGELOG.md  Cargo.toml
src/gherkin-fmt-cli/: CHANGELOG.md  Cargo.toml
testing/: 1-result.feature  1.feature  2-result.feature  2.feature  3-result.feature  3.feature  4-result.feature  4.feature  5-result.feature  5.feature
tests/: cli.rs
(+67 files in other folders)
