[package]
name = "gherkin-fmt"
resolver = "3"
version = "0.1.5"
edition = "2024"
readme = "README.md"
description = "An opinionated command line Gherkin (*.feature) files formatter"
license-file = "LICENSE"
repository = "https://github.com/AndrasCsanyi/gherkin-fmt"
keywords = ["gherkin", "formatter", "cli", "cucumber"]
categories = ["command-line-utilities", "development-tools"]


[[bin]]
name = "gherkin-fmt"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4.6.1", features = ["derive"] }
clap-stdin = "0.8.1"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.20"
